--- a/erlelo_config.json
+++ b/erlelo_config.json
@@ -1,11 +1,94 @@
 {
   "version": "1.0",
   "variables": [
-    {
-      "name": "test_erlelo_github",
-      "type": "int",
-      "default_value": 42,
-      "description": "Test variable from GitHub config"
-    }
+    {"name": "ch1_temp_current", "type": "float", "default_value": 0, "description": "Chamber 1: Current temperature"},
+    {"name": "ch1_temp_target", "type": "float", "default_value": 25, "description": "Chamber 1: Target temperature"},
+    {"name": "ch1_temp_tolerance", "type": "float", "default_value": 1, "description": "Chamber 1: Temperature tolerance"},
+    {"name": "ch1_humidity_current", "type": "float", "default_value": 0, "description": "Chamber 1: Current humidity"},
+    {"name": "ch1_humidity_target", "type": "float", "default_value": 70, "description": "Chamber 1: Target humidity"},
+    {"name": "ch1_humidity_tolerance", "type": "float", "default_value": 5, "description": "Chamber 1: Humidity tolerance"},
+    {"name": "ch1_heating_active", "type": "bool", "default_value": false, "description": "Chamber 1: Heating relay state"},
+    {"name": "ch1_cooling_active", "type": "bool", "default_value": false, "description": "Chamber 1: Cooling relay state"},
+    {"name": "ch1_humidifier_active", "type": "bool", "default_value": false, "description": "Chamber 1: Humidifier relay state"},
+    {"name": "ch1_dehumidifier_active", "type": "bool", "default_value": false, "description": "Chamber 1: Dehumidifier relay state"},
+    {"name": "ch1_fan_active", "type": "bool", "default_value": false, "description": "Chamber 1: Fan relay state"},
+    {"name": "ch1_damper_open", "type": "bool", "default_value": false, "description": "Chamber 1: Damper state"},
+    {"name": "ch1_mode", "type": "int", "default_value": 0, "description": "Chamber 1: Operating mode"},
+    {"name": "ch1_phase", "type": "int", "default_value": 0, "description": "Chamber 1: Current phase"},
+    {"name": "ch1_phase_time_remaining", "type": "int", "default_value": 0, "description": "Chamber 1: Phase time remaining"},
+    {"name": "ch1_temp_trend", "type": "float", "default_value": 0, "description": "Chamber 1: Temperature trend"},
+    {"name": "ch1_humidity_trend", "type": "float", "default_value": 0, "description": "Chamber 1: Humidity trend"},
+    {"name": "ch1_error_code", "type": "int", "default_value": 0, "description": "Chamber 1: Error code"},
+    {"name": "ch1_last_update", "type": "int", "default_value": 0, "description": "Chamber 1: Last update timestamp"},
+    {"name": "ch1_control_enabled", "type": "bool", "default_value": true, "description": "Chamber 1: Control enabled"},
+    {"name": "ch1_temp_min_limit", "type": "float", "default_value": 5, "description": "Chamber 1: Min temperature limit"},
+    {"name": "ch1_temp_max_limit", "type": "float", "default_value": 40, "description": "Chamber 1: Max temperature limit"},
+    {"name": "ch1_humidity_min_limit", "type": "float", "default_value": 30, "description": "Chamber 1: Min humidity limit"},
+    {"name": "ch1_humidity_max_limit", "type": "float", "default_value": 95, "description": "Chamber 1: Max humidity limit"},
+    {"name": "ch1_sensor_status", "type": "int", "default_value": 0, "description": "Chamber 1: Sensor status"},
+
+    {"name": "ch2_temp_current", "type": "float", "default_value": 0, "description": "Chamber 2: Current temperature"},
+    {"name": "ch2_temp_target", "type": "float", "default_value": 25, "description": "Chamber 2: Target temperature"},
+    {"name": "ch2_temp_tolerance", "type": "float", "default_value": 1, "description": "Chamber 2: Temperature tolerance"},
+    {"name": "ch2_humidity_current", "type": "float", "default_value": 0, "description": "Chamber 2: Current humidity"},
+    {"name": "ch2_humidity_target", "type": "float", "default_value": 70, "description": "Chamber 2: Target humidity"},
+    {"name": "ch2_humidity_tolerance", "type": "float", "default_value": 5, "description": "Chamber 2: Humidity tolerance"},
+    {"name": "ch2_heating_active", "type": "bool", "default_value": false, "description": "Chamber 2: Heating relay state"},
+    {"name": "ch2_cooling_active", "type": "bool", "default_value": false, "description": "Chamber 2: Cooling relay state"},
+    {"name": "ch2_humidifier_active", "type": "bool", "default_value": false, "description": "Chamber 2: Humidifier relay state"},
+    {"name": "ch2_dehumidifier_active", "type": "bool", "default_value": false, "description": "Chamber 2: Dehumidifier relay state"},
+    {"name": "ch2_fan_active", "type": "bool", "default_value": false, "description": "Chamber 2: Fan relay state"},
+    {"name": "ch2_damper_open", "type": "bool", "default_value": false, "description": "Chamber 2: Damper state"},
+    {"name": "ch2_mode", "type": "int", "default_value": 0, "description": "Chamber 2: Operating mode"},
+    {"name": "ch2_phase", "type": "int", "default_value": 0, "description": "Chamber 2: Current phase"},
+    {"name": "ch2_phase_time_remaining", "type": "int", "default_value": 0, "description": "Chamber 2: Phase time remaining"},
+    {"name": "ch2_temp_trend", "type": "float", "default_value": 0, "description": "Chamber 2: Temperature trend"},
+    {"name": "ch2_humidity_trend", "type": "float", "default_value": 0, "description": "Chamber 2: Humidity trend"},
+    {"name": "ch2_error_code", "type": "int", "default_value": 0, "description": "Chamber 2: Error code"},
+    {"name": "ch2_last_update", "type": "int", "default_value": 0, "description": "Chamber 2: Last update timestamp"},
+    {"name": "ch2_control_enabled", "type": "bool", "default_value": true, "description": "Chamber 2: Control enabled"},
+    {"name": "ch2_temp_min_limit", "type": "float", "default_value": 5, "description": "Chamber 2: Min temperature limit"},
+    {"name": "ch2_temp_max_limit", "type": "float", "default_value": 40, "description": "Chamber 2: Max temperature limit"},
+    {"name": "ch2_humidity_min_limit", "type": "float", "default_value": 30, "description": "Chamber 2: Min humidity limit"},
+    {"name": "ch2_humidity_max_limit", "type": "float", "default_value": 95, "description": "Chamber 2: Max humidity limit"},
+    {"name": "ch2_sensor_status", "type": "int", "default_value": 0, "description": "Chamber 2: Sensor status"},
+
+    {"name": "ch3_temp_current", "type": "float", "default_value": 0, "description": "Chamber 3: Current temperature"},
+    {"name": "ch3_temp_target", "type": "float", "default_value": 25, "description": "Chamber 3: Target temperature"},
+    {"name": "ch3_temp_tolerance", "type": "float", "default_value": 1, "description": "Chamber 3: Temperature tolerance"},
+    {"name": "ch3_humidity_current", "type": "float", "default_value": 0, "description": "Chamber 3: Current humidity"},
+    {"name": "ch3_humidity_target", "type": "float", "default_value": 70, "description": "Chamber 3: Target humidity"},
+    {"name": "ch3_humidity_tolerance", "type": "float", "default_value": 5, "description": "Chamber 3: Humidity tolerance"},
+    {"name": "ch3_heating_active", "type": "bool", "default_value": false, "description": "Chamber 3: Heating relay state"},
+    {"name": "ch3_cooling_active", "type": "bool", "default_value": false, "description": "Chamber 3: Cooling relay state"},
+    {"name": "ch3_humidifier_active", "type": "bool", "default_value": false, "description": "Chamber 3: Humidifier relay state"},
+    {"name": "ch3_dehumidifier_active", "type": "bool", "default_value": false, "description": "Chamber 3: Dehumidifier relay state"},
+    {"name": "ch3_fan_active", "type": "bool", "default_value": false, "description": "Chamber 3: Fan relay state"},
+    {"name": "ch3_damper_open", "type": "bool", "default_value": false, "description": "Chamber 3: Damper state"},
+    {"name": "ch3_mode", "type": "int", "default_value": 0, "description": "Chamber 3: Operating mode"},
+    {"name": "ch3_phase", "type": "int", "default_value": 0, "description": "Chamber 3: Current phase"},
+    {"name": "ch3_phase_time_remaining", "type": "int", "default_value": 0, "description": "Chamber 3: Phase time remaining"},
+    {"name": "ch3_temp_trend", "type": "float", "default_value": 0, "description": "Chamber 3: Temperature trend"},
+    {"name": "ch3_humidity_trend", "type": "float", "default_value": 0, "description": "Chamber 3: Humidity trend"},
+    {"name": "ch3_error_code", "type": "int", "default_value": 0, "description": "Chamber 3: Error code"},
+    {"name": "ch3_last_update", "type": "int", "default_value": 0, "description": "Chamber 3: Last update timestamp"},
+    {"name": "ch3_control_enabled", "type": "bool", "default_value": true, "description": "Chamber 3: Control enabled"},
+    {"name": "ch3_temp_min_limit", "type": "float", "default_value": 5, "description": "Chamber 3: Min temperature limit"},
+    {"name": "ch3_temp_max_limit", "type": "float", "default_value": 40, "description": "Chamber 3: Max temperature limit"},
+    {"name": "ch3_humidity_min_limit", "type": "float", "default_value": 30, "description": "Chamber 3: Min humidity limit"},
+    {"name": "ch3_humidity_max_limit", "type": "float", "default_value": 95, "description": "Chamber 3: Max humidity limit"},
+    {"name": "ch3_sensor_status", "type": "int", "default_value": 0, "description": "Chamber 3: Sensor status"},
+
+    {"name": "emergency_stop", "type": "bool", "default_value": false, "description": "System: Emergency stop"},
+    {"name": "system_status", "type": "int", "default_value": 0, "description": "System: Status code"},
+    {"name": "active_alarms", "type": "int", "default_value": 0, "description": "System: Active alarms count"},
+    {"name": "last_alarm_code", "type": "int", "default_value": 0, "description": "System: Last alarm code"},
+    {"name": "uptime_seconds", "type": "int", "default_value": 0, "description": "System: Uptime"},
+    {"name": "modbus_status", "type": "int", "default_value": 0, "description": "System: Modbus status"},
+    {"name": "sbus_status", "type": "int", "default_value": 0, "description": "System: SBUS status"},
+
+    {"name": "hardware_config", "type": "string", "default_value": "{}", "description": "Config: Hardware mapping"},
+    {"name": "control_config", "type": "string", "default_value": "{}", "description": "Config: Control settings"},
+    {"name": "safety_config", "type": "string", "default_value": "{}", "description": "Config: Safety thresholds"}
   ]
 }
