--- a/erlelo_config_1ch.json
+++ b/erlelo_config_1ch.json
@@ -1,267 +1,332 @@
 {
-  "version": "2.4",
-  "description": "Erlelo 1-chamber climate control - Humidity-Primary Control",
-  "num_chambers": 1,
+  "version": "2.6.1",
+  "description": "ERLELO Climate Control System - 1 Chamber Configuration",
+  "chambers": 1,
+  
+  "hardware_config": {
+    "chamber_1": {
+      "description": "Chamber 1 Hardware Configuration",
+      "modbus": {
+        "supply_client_id": null,
+        "chamber_client_id": null,
+        "supply_slave_id": 1,
+        "chamber_slave_id": 2,
+        "temp_register": 0,
+        "humi_register": 1
+      },
+      "sbus": {
+        "inp_humidity_save": null,
+        "inp_sum_wint": null,
+        "inp_weight_1": null,
+        "inp_weight_2": null,
+        "rel_warm": null,
+        "rel_cool": null,
+        "rel_add_air_max": null,
+        "rel_reventon": null,
+        "rel_add_air_save": null,
+        "rel_bypass_open": null,
+        "rel_main_fan": null,
+        "rel_humidifier": null,
+        "rel_sleep": null
+      }
+    },
+    "outdoor": {
+      "description": "Outdoor Sensor Hardware Configuration",
+      "modbus_client_id": null,
+      "modbus_slave_id": 10,
+      "temp_register": 0,
+      "humi_register": 1
+    }
+  },
+  
   "default_control_constants": {
-    "deltahi_kamra_homerseklet": 10,
+    "deltahi_kamra_homerseklet": 15,
     "deltalo_kamra_homerseklet": 10,
-    "deltahi_befujt_homerseklet": 20,
-    "deltalo_befujt_homerseklet": 15,
-    "deltahi_kamra_para": 15,
-    "deltalo_kamra_para": 10,
-    "ah_deadzone": 50,
+    "temp_hysteresis_kamra": 5,
+    "ah_deadzone_kamra": 80,
+    "ah_hysteresis_kamra": 30,
+    "deltahi_befujt_homerseklet": 10,
+    "deltalo_befujt_homerseklet": 10,
+    "temp_hysteresis_befujt": 3,
+    "ah_deadzone_befujt": 50,
+    "ah_hysteresis_befujt": 20,
     "outdoor_mix_ratio": 30,
-    "outdoor_temp_threshold": 50,
-    "P": 20,
-    "humidifier_installed": false,
-    "sleep_cycle_enabled": false,
-    "sleep_on_minutes": 45,
-    "sleep_off_minutes": 15
+    "outdoor_use_threshold": 50,
+    "proportional_gain": 20,
+    "min_supply_air_temp": 80,
+    "max_supply_air_temp": 200,
+    "min_temp_no_humidifier": 110,
+    "buffer_size": 5,
+    "spike_threshold": 50,
+    "max_error_count": 10,
+    "temp_change_threshold": 20,
+    "humidity_change_threshold": 50,
+    "humidifier_installed": 0,
+    "humidifier_start_delta": 0,
+    "sleep_cycle_enabled": 0,
+    "sleep_on_minutes": 55,
+    "sleep_off_minutes": 5,
+    "init_duration": 32
   },
-  "naming_convention": {
-    "chamber_specific": "_ch1, _ch2, _ch3",
-    "global": "_glbl"
-  },
+  
   "variables": [
     {
       "name": "kamra_homerseklet_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Chamber temperature ×10"
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Current chamber temperature (°C × 10)"
     },
     {
       "name": "kamra_para_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Chamber humidity ×10"
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Current chamber humidity (% × 10)"
+    },
+    {
+      "name": "kamra_homerseklet_raw_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Raw chamber temperature from sensor"
+    },
+    {
+      "name": "kamra_para_raw_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Raw chamber humidity from sensor"
     },
     {
       "name": "kamra_cel_homerseklet_ch1",
-      "type": "integer",
-      "default_value": 150,
-      "description": "Chamber 1: Target chamber temp ×10 (15.0°C)"
+      "type": "number",
+      "default_value": "150",
+      "description": "Chamber 1: Target chamber temperature (°C × 10)"
     },
     {
       "name": "kamra_cel_para_ch1",
-      "type": "integer",
-      "default_value": 750,
-      "description": "Chamber 1: Target chamber humidity ×10 (75.0%)"
+      "type": "number",
+      "default_value": "750",
+      "description": "Chamber 1: Target chamber humidity (% × 10)"
     },
     {
       "name": "befujt_cel_homerseklet_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Calculated supply air target temp"
+      "type": "number",
+      "default_value": "150",
+      "description": "Chamber 1: Target supply air temperature (°C × 10)"
     },
     {
       "name": "befujt_cel_para_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Calculated supply air target humidity"
+      "type": "number",
+      "default_value": "750",
+      "description": "Chamber 1: Target supply air humidity (% × 10)"
     },
     {
       "name": "befujt_homerseklet_akt_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Current supply air temp"
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Current supply air temperature (°C × 10)"
     },
     {
       "name": "befujt_para_akt_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Current supply air humidity"
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Current supply air humidity (% × 10)"
+    },
+    {
+      "name": "befujt_homerseklet_raw_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Raw supply air temperature from sensor"
+    },
+    {
+      "name": "befujt_para_raw_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Raw supply air humidity from sensor"
     },
     {
       "name": "befujt_homerseklet_table_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "[]",
-      "description": "Chamber 1: Supply air temp moving average buffer"
+      "description": "Chamber 1: Supply air temperature buffer (JSON array)"
     },
     {
       "name": "befujt_para_table_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "[]",
-      "description": "Chamber 1: Supply air humidity moving average buffer"
+      "description": "Chamber 1: Supply air humidity buffer (JSON array)"
     },
     {
       "name": "kamra_homerseklet_table_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "[]",
-      "description": "Chamber 1: Chamber temp moving average buffer"
+      "description": "Chamber 1: Chamber temperature buffer (JSON array)"
     },
     {
       "name": "kamra_para_table_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "[]",
-      "description": "Chamber 1: Chamber humidity moving average buffer"
+      "description": "Chamber 1: Chamber humidity buffer (JSON array)"
     },
     {
       "name": "befujt_hibaszam_ch1",
-      "type": "integer",
-      "default_value": 3,
-      "description": "Chamber 1: Supply air sensor error count"
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Supply sensor error count"
     },
     {
       "name": "kamra_hibaszam_ch1",
-      "type": "integer",
-      "default_value": 3,
+      "type": "number",
+      "default_value": "0",
       "description": "Chamber 1: Chamber sensor error count"
     },
     {
       "name": "constansok_ch1",
-      "type": "string",
-      "default_value": "{\"deltahi_kamra_homerseklet\":10,\"deltalo_kamra_homerseklet\":10,\"deltahi_befujt_homerseklet\":20,\"deltalo_befujt_homerseklet\":15,\"deltahi_kamra_para\":15,\"deltalo_kamra_para\":10,\"ah_deadzone\":50,\"outdoor_mix_ratio\":30,\"outdoor_temp_threshold\":50,\"P\":20,\"humidifier_installed\":false,\"sleep_cycle_enabled\":false,\"sleep_on_minutes\":45,\"sleep_off_minutes\":15}",
-      "description": "Chamber 1: Control constants JSON"
+      "type": "text",
+      "default_value": "{\"deltahi_kamra_homerseklet\":15,\"deltalo_kamra_homerseklet\":10,\"temp_hysteresis_kamra\":5,\"ah_deadzone_kamra\":80,\"ah_hysteresis_kamra\":30,\"deltahi_befujt_homerseklet\":10,\"deltalo_befujt_homerseklet\":10,\"temp_hysteresis_befujt\":3,\"ah_deadzone_befujt\":50,\"ah_hysteresis_befujt\":20,\"outdoor_mix_ratio\":30,\"outdoor_use_threshold\":50,\"proportional_gain\":20,\"min_supply_air_temp\":80,\"max_supply_air_temp\":200,\"min_temp_no_humidifier\":110,\"buffer_size\":5,\"spike_threshold\":50,\"max_error_count\":10,\"temp_change_threshold\":20,\"humidity_change_threshold\":50,\"humidifier_installed\":0,\"humidifier_start_delta\":0,\"sleep_cycle_enabled\":0,\"sleep_on_minutes\":55,\"sleep_off_minutes\":5,\"init_duration\":32}",
+      "description": "Chamber 1: Control constants (JSON)"
     },
     {
       "name": "signals_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "{}",
-      "description": "Chamber 1: Control signals state"
+      "description": "Chamber 1: Control signals output (JSON)"
     },
     {
       "name": "cycle_variable_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "{}",
-      "description": "Chamber 1: Sleep cycle state"
+      "description": "Chamber 1: Cycle timing data (JSON)"
+    },
+    {
+      "name": "ah_kamra_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Absolute humidity chamber (g/m³ × 100)"
+    },
+    {
+      "name": "ah_befujt_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Absolute humidity supply (g/m³ × 100)"
+    },
+    {
+      "name": "ah_cel_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Target absolute humidity (g/m³ × 100)"
+    },
+    {
+      "name": "dp_kamra_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Dew point chamber (°C × 10)"
+    },
+    {
+      "name": "dp_befujt_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Dew point supply (°C × 10)"
+    },
+    {
+      "name": "dp_cel_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Target dew point (°C × 10)"
     },
     {
       "name": "ah_dp_table_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "{}",
-      "description": "Chamber 1: Absolute humidity & dew point"
+      "description": "Chamber 1: AH/DP calculation results (JSON)"
     },
     {
       "name": "suly_meres_table_1_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "[]",
       "description": "Chamber 1: Weight sensor 1 buffer"
     },
     {
       "name": "suly_meres_table_2_ch1",
-      "type": "string",
+      "type": "text",
       "default_value": "[]",
       "description": "Chamber 1: Weight sensor 2 buffer"
     },
     {
-      "name": "atlagsuly_1_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Average weight 1"
+      "name": "suly_meres_akt_1_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Weight sensor 1 current"
     },
     {
-      "name": "atlagsuly_2_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Average weight 2"
+      "name": "suly_meres_akt_2_ch1",
+      "type": "number",
+      "default_value": "0",
+      "description": "Chamber 1: Weight sensor 2 current"
     },
     {
-      "name": "hibajel_ch1",
-      "type": "boolean",
-      "default_value": false,
-      "description": "Chamber 1: Error flag"
-    },
-    {
-      "name": "befujt_szimulalt_ch1",
-      "type": "boolean",
-      "default_value": false,
-      "description": "Chamber 1: Supply air simulation mode"
-    },
-    {
-      "name": "kamra_szimulalt_ch1",
-      "type": "boolean",
-      "default_value": false,
-      "description": "Chamber 1: Chamber simulation mode"
-    },
-    {
-      "name": "ntc1_homerseklet_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: NTC sensor 1 temperature ×10"
-    },
-    {
-      "name": "ntc2_homerseklet_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: NTC sensor 2 temperature ×10"
-    },
-    {
-      "name": "ntc3_homerseklet_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: NTC sensor 3 temperature ×10"
-    },
-    {
-      "name": "ntc4_homerseklet_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: NTC sensor 4 temperature ×10"
-    },
-    {
-      "name": "dp_kamra_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Chamber dew point ×10"
-    },
-    {
-      "name": "dp_befujt_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Supply air dew point ×10"
-    },
-    {
-      "name": "dp_cel_ch1",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Chamber 1: Target dew point ×10"
+      "name": "hardware_config_ch1",
+      "type": "text",
+      "default_value": "{\"modbus\":{\"supply_client_id\":null,\"chamber_client_id\":null,\"supply_slave_id\":1,\"chamber_slave_id\":2,\"temp_register\":0,\"humi_register\":1},\"sbus\":{\"inp_humidity_save\":null,\"inp_sum_wint\":null,\"inp_weight_1\":null,\"inp_weight_2\":null,\"rel_warm\":null,\"rel_cool\":null,\"rel_add_air_max\":null,\"rel_reventon\":null,\"rel_add_air_save\":null,\"rel_bypass_open\":null,\"rel_main_fan\":null,\"rel_humidifier\":null,\"rel_sleep\":null}}",
+      "description": "Chamber 1: Hardware configuration (Modbus/SBUS IDs) - EDIT THIS"
     },
     {
       "name": "kulso_homerseklet_glbl",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Global: Outdoor temperature ×10"
+      "type": "number",
+      "default_value": "0",
+      "description": "Global: Current outdoor temperature (°C × 10)"
     },
     {
       "name": "kulso_para_glbl",
-      "type": "integer",
-      "default_value": 0,
-      "description": "Global: Outdoor humidity ×10"
+      "type": "number",
+      "default_value": "0",
+      "description": "Global: Current outdoor humidity (% × 10)"
+    },
+    {
+      "name": "kulso_homerseklet_raw_glbl",
+      "type": "number",
+      "default_value": "0",
+      "description": "Global: Raw outdoor temperature"
+    },
+    {
+      "name": "kulso_para_raw_glbl",
+      "type": "number",
+      "default_value": "0",
+      "description": "Global: Raw outdoor humidity"
     },
     {
       "name": "kulso_homerseklet_table_glbl",
-      "type": "string",
+      "type": "text",
       "default_value": "[]",
-      "description": "Global: Outdoor temp moving average buffer"
+      "description": "Global: Outdoor temperature buffer"
     },
     {
       "name": "kulso_para_table_glbl",
-      "type": "string",
+      "type": "text",
       "default_value": "[]",
-      "description": "Global: Outdoor humidity moving average buffer"
-    },
-    {
-      "name": "kulso_hibaszam_glbl",
-      "type": "integer",
-      "default_value": 3,
-      "description": "Global: Outdoor sensor error count"
-    },
-    {
-      "name": "kulso_szimulalt_glbl",
-      "type": "boolean",
-      "default_value": false,
-      "description": "Global: Outdoor simulation mode"
+      "description": "Global: Outdoor humidity buffer"
     },
     {
       "name": "kulso_ah_dp_glbl",
-      "type": "string",
+      "type": "text",
       "default_value": "{}",
-      "description": "Global: Outdoor absolute humidity & dew point"
+      "description": "Global: Outdoor AH/DP values (JSON)"
+    },
+    {
+      "name": "kulso_hibaszam_glbl",
+      "type": "number",
+      "default_value": "0",
+      "description": "Global: Outdoor sensor error count"
+    },
+    {
+      "name": "hardware_config_outdoor_glbl",
+      "type": "text",
+      "default_value": "{\"modbus_client_id\":null,\"modbus_slave_id\":10,\"temp_register\":0,\"humi_register\":1}",
+      "description": "Global: Outdoor sensor hardware configuration - EDIT THIS"
     },
     {
       "name": "variable_name_map_glbl",
-      "type": "string",
+      "type": "text",
       "default_value": "{}",
-      "description": "Global: Variable name to ID mapping (built by erlelo_store)"
+      "description": "Global: Variable name to ID mapping (JSON) - AUTO-GENERATED"
     }
   ]
 }
