--- a/erlelo_config_1ch.json
+++ b/erlelo_config_1ch.json
@@ -72,73 +72,73 @@
   "variables": [
     {
       "name": "kamra_homerseklet_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Current chamber temperature (°C × 10)"
     },
     {
       "name": "kamra_para_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Current chamber humidity (% × 10)"
     },
     {
       "name": "kamra_homerseklet_raw_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Raw chamber temperature from sensor"
     },
     {
       "name": "kamra_para_raw_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Raw chamber humidity from sensor"
     },
     {
       "name": "kamra_cel_homerseklet_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "150",
       "description": "Chamber 1: Target chamber temperature (°C × 10)"
     },
     {
       "name": "kamra_cel_para_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "750",
       "description": "Chamber 1: Target chamber humidity (% × 10)"
     },
     {
       "name": "befujt_cel_homerseklet_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "150",
       "description": "Chamber 1: Target supply air temperature (°C × 10)"
     },
     {
       "name": "befujt_cel_para_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "750",
       "description": "Chamber 1: Target supply air humidity (% × 10)"
     },
     {
       "name": "befujt_homerseklet_akt_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Current supply air temperature (°C × 10)"
     },
     {
       "name": "befujt_para_akt_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Current supply air humidity (% × 10)"
     },
     {
       "name": "befujt_homerseklet_raw_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Raw supply air temperature from sensor"
     },
     {
       "name": "befujt_para_raw_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Raw supply air humidity from sensor"
     },
@@ -168,13 +168,13 @@
     },
     {
       "name": "befujt_hibaszam_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Supply sensor error count"
     },
     {
       "name": "kamra_hibaszam_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Chamber sensor error count"
     },
@@ -198,37 +198,37 @@
     },
     {
       "name": "ah_kamra_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Absolute humidity chamber (g/m³ × 100)"
     },
     {
       "name": "ah_befujt_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Absolute humidity supply (g/m³ × 100)"
     },
     {
       "name": "ah_cel_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Target absolute humidity (g/m³ × 100)"
     },
     {
       "name": "dp_kamra_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Dew point chamber (°C × 10)"
     },
     {
       "name": "dp_befujt_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Dew point supply (°C × 10)"
     },
     {
       "name": "dp_cel_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Target dew point (°C × 10)"
     },
@@ -252,13 +252,13 @@
     },
     {
       "name": "suly_meres_akt_1_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Weight sensor 1 current"
     },
     {
       "name": "suly_meres_akt_2_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Weight sensor 2 current"
     },
@@ -270,25 +270,25 @@
     },
     {
       "name": "kulso_homerseklet_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Current outdoor temperature (°C × 10)"
     },
     {
       "name": "kulso_para_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Current outdoor humidity (% × 10)"
     },
     {
       "name": "kulso_homerseklet_raw_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Raw outdoor temperature"
     },
     {
       "name": "kulso_para_raw_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Raw outdoor humidity"
     },
@@ -312,7 +312,7 @@
     },
     {
       "name": "kulso_hibaszam_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Outdoor sensor error count"
     },
