--- a/erlelo_config_2ch.json
+++ b/erlelo_config_2ch.json
@@ -95,73 +95,73 @@
   "variables": [
     {
       "name": "kamra_homerseklet_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Current chamber temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kamra_para_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Current chamber humidity (% \u00d7 10)"
     },
     {
       "name": "kamra_homerseklet_raw_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Raw chamber temperature from sensor"
     },
     {
       "name": "kamra_para_raw_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Raw chamber humidity from sensor"
     },
     {
       "name": "kamra_cel_homerseklet_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "150",
       "description": "Chamber 1: Target chamber temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kamra_cel_para_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "750",
       "description": "Chamber 1: Target chamber humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_cel_homerseklet_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "150",
       "description": "Chamber 1: Target supply air temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "befujt_cel_para_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "750",
       "description": "Chamber 1: Target supply air humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_homerseklet_akt_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Current supply air temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "befujt_para_akt_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Current supply air humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_homerseklet_raw_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Raw supply air temperature from sensor"
     },
     {
       "name": "befujt_para_raw_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Raw supply air humidity from sensor"
     },
@@ -191,13 +191,13 @@
     },
     {
       "name": "befujt_hibaszam_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Supply sensor error count"
     },
     {
       "name": "kamra_hibaszam_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Chamber sensor error count"
     },
@@ -221,37 +221,37 @@
     },
     {
       "name": "ah_kamra_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Absolute humidity chamber (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "ah_befujt_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Absolute humidity supply (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "ah_cel_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Target absolute humidity (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "dp_kamra_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Dew point chamber (\u00b0C \u00d7 10)"
     },
     {
       "name": "dp_befujt_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Dew point supply (\u00b0C \u00d7 10)"
     },
     {
       "name": "dp_cel_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Target dew point (\u00b0C \u00d7 10)"
     },
@@ -275,13 +275,13 @@
     },
     {
       "name": "suly_meres_akt_1_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Weight sensor 1 current"
     },
     {
       "name": "suly_meres_akt_2_ch1",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 1: Weight sensor 2 current"
     },
@@ -293,73 +293,73 @@
     },
     {
       "name": "kamra_homerseklet_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Current chamber temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kamra_para_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Current chamber humidity (% \u00d7 10)"
     },
     {
       "name": "kamra_homerseklet_raw_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Raw chamber temperature from sensor"
     },
     {
       "name": "kamra_para_raw_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Raw chamber humidity from sensor"
     },
     {
       "name": "kamra_cel_homerseklet_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "150",
       "description": "Chamber 2: Target chamber temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kamra_cel_para_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "750",
       "description": "Chamber 2: Target chamber humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_cel_homerseklet_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "150",
       "description": "Chamber 2: Target supply air temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "befujt_cel_para_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "750",
       "description": "Chamber 2: Target supply air humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_homerseklet_akt_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Current supply air temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "befujt_para_akt_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Current supply air humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_homerseklet_raw_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Raw supply air temperature from sensor"
     },
     {
       "name": "befujt_para_raw_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Raw supply air humidity from sensor"
     },
@@ -389,13 +389,13 @@
     },
     {
       "name": "befujt_hibaszam_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Supply sensor error count"
     },
     {
       "name": "kamra_hibaszam_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Chamber sensor error count"
     },
@@ -419,37 +419,37 @@
     },
     {
       "name": "ah_kamra_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Absolute humidity chamber (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "ah_befujt_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Absolute humidity supply (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "ah_cel_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Target absolute humidity (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "dp_kamra_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Dew point chamber (\u00b0C \u00d7 10)"
     },
     {
       "name": "dp_befujt_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Dew point supply (\u00b0C \u00d7 10)"
     },
     {
       "name": "dp_cel_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Target dew point (\u00b0C \u00d7 10)"
     },
@@ -473,13 +473,13 @@
     },
     {
       "name": "suly_meres_akt_1_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Weight sensor 1 current"
     },
     {
       "name": "suly_meres_akt_2_ch2",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Chamber 2: Weight sensor 2 current"
     },
@@ -491,25 +491,25 @@
     },
     {
       "name": "kulso_homerseklet_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Current outdoor temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kulso_para_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Current outdoor humidity (% \u00d7 10)"
     },
     {
       "name": "kulso_homerseklet_raw_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Raw outdoor temperature"
     },
     {
       "name": "kulso_para_raw_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Raw outdoor humidity"
     },
@@ -533,7 +533,7 @@
     },
     {
       "name": "kulso_hibaszam_glbl",
-      "type": "number",
+      "type": "integer",
       "default_value": "0",
       "description": "Global: Outdoor sensor error count"
     },
